# Robotrain-embodied-ai-training-platform

./: .dockerignore  .env  .gitignore  API_CONFIG_README.md  Backend.txt  Dockerfile  JWT_AUTH_README.md  README.md  REGISTER_API_README.md  docker-compose.dev.yml  docker-compose.yml  env.example  environment.yml  init-db.sql  lerobot.txt  package-lock.json  platform_config.yaml  platform_requirements.txt  pyproject.toml  simple_e2e_test.py
FinalRelease/: Vision文档.docx  峰值压力测试报告.html  持续压力测试报告.html  物理架构.oom  系统测试用例.xlsx  软件架构文档.docx  项目总结报告.docx
TechPrototype/: 技术迭代计划.docx  (+5 more)
train/training_platform/: __init__.py  pyproject.toml
train/training_platform/common/: __init__.py  minio_utils.py  rabbitmq_utils.py  task_models.py
train/training_platform/configs/: settings.py
train/training_platform/evaluater/: __init__.py  evaluater_logic.py  lerobot_evaluater_actor.py
train/training_platform/evaluator/: __init__.py  evaluator_logic.py  lerobot_evaluate_actor.py
train/training_platform/scheduler/: __init__.py  distributed_scheduler.py  scheduler_actor.py
train/training_platform/tests/: example_scheduler_usage.py  example_usage.py  focused_actor_test.py  test_data_preparation.py  test_dis_train_func.py  test_evaluator_actor.py  test_evaluator_correctness.py  test_evaluator_with_videos.py  test_minio_model_evaluation.py  test_pipeline.py  test_run_evaluation.py  test_trainer_actor_workflow.py  tested_code.md
train/training_platform/trainer/: distributed_train_logic.py  distributed_trainer_actor.py  lerobot_train_actor.py  lerobot_trainer_logic.py  trainer_actor.py
(+337 files in other folders)
