[project]
name = "training_platform"
version = "0.1.0"
description = "The training service platform for robotics."
requires-python = ">=3.10"

# 这里列出你的平台代码直接依赖的库
# 注意：我们不在这里列出 lerobot，因为我们会通过其他方式安装它
dependencies = [
    "ray[serve]>=2.9.0", # 使用 serve 以便未来扩展
    "aio_pika>=9.4.0",
    "miniopy-async>=1.15.0",
    "pika>=1.3.0",
    "pydantic>=2.0",
    "pytest>=8.0",
    "pytest-asyncio>=0.23.0",
    # 其他你的平台代码需要的依赖
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"